Fixes to merge with jdk-17-ga